[package]
name = "substitution-cipher-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.3"
lazy_static = "1.4.0"
itertools = "0.12.1"
std-semaphore = "0.1"
rand = "0.9.0"
clap = { version = "4.5.31", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.7"
rust-embed = "8.6.0"
